@@ -33,20 +33,28 @@ public class ValueValueTypeTest {
         when(cvValue.getName()).thenReturn("Name");
         when(cvValue.getCvNumber()).thenReturn("1,2");
         when(cvValue.getId()).thenReturn("id1");
+        when(cvValue.getReadMask()).thenReturn(null);
         value = new ValueValueType();
         value.setCVValue(cvValue);
         value.setCVReader(cvHandler);
     }
 
     @Test
-    public void testGetValue() {
-        assertEquals(new Integer(257), value.getValue());
+    public void testGetValueNoMask() {
+        when(cvValue.getMask()).thenReturn(0);
+        assertEquals(Integer.valueOf(257), value.getValue());
+    }
+
+    @Test
+    public void testGetValueNullMask() {
+        when(cvValue.getMask()).thenReturn(null);
+        assertEquals(Integer.valueOf(257), value.getValue());
     }
 
     @Test
     public void testGetWithMask() {
         when(cvValue.getMask()).thenReturn(255);
-        assertEquals(new Integer(1), value.getValue());
+        assertEquals(Integer.valueOf(1), value.getValue());
     }
 
     @Test
@@ -56,10 +64,20 @@ public class ValueValueTypeTest {
 
     @Test
     public void testCVValueNoMask() {
+        when(cvValue.getMask()).thenReturn(0);
         final List<DecoderSetting> decoderSettings = new ArrayList<>();
         decoderSettings.add(createDecoderSetting("Flag", 1));
         decoderSettings.add(createDecoderSetting("Name", 1));
-        assertEquals(new Integer(0), value.getCVValue(1, decoderSettings));
+        assertEquals(Integer.valueOf(0), value.getCVValue(1, decoderSettings));
+    }
+
+    @Test
+    public void testCVValueNullMask() {
+        when(cvValue.getMask()).thenReturn(null);
+        final List<DecoderSetting> decoderSettings = new ArrayList<>();
+        decoderSettings.add(createDecoderSetting("Flag", 1));
+        decoderSettings.add(createDecoderSetting("Name", 1));
+        assertEquals(Integer.valueOf(0), value.getCVValue(1, decoderSettings));
     }
 
     @Test
@@ -68,7 +86,7 @@ public class ValueValueTypeTest {
         final List<DecoderSetting> decoderSettings = new ArrayList<>();
         decoderSettings.add(createDecoderSetting("Flag", 1));
         decoderSettings.add(createDecoderSetting("Name", 1));
-        assertEquals(new Integer(129), value.getCVValue(2, decoderSettings));
+        assertEquals(Integer.valueOf(129), value.getCVValue(2, decoderSettings));
     }
 
     private DecoderSetting createDecoderSetting(final String name, final Integer value) {
